--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 ghc: 7.8
+env:
+ - GHCVER=7.4.2
+ - GHCVER=7.6.3
+ - GHCVER=7.8.4
+ - GHCVER=7.10.3
+ - GHCVER=8.0.1
+ - GHCVER=head
+
 script:
-  - runhaskell hs1_spec.hs
+ - wget https://raw.github.com/ndmitchell/neil/master/travis.sh -O - --no-check-certificate --quiet | sh
