--- a/hw1_spec.cabal
+++ b/hw1_spec.cabal
@@ -86,4 +86,5 @@ test-suite spec
     , directory
     , stringbuilder
     , hspec-meta >= 2.3.2
+    , hspec   == 2.*
   default-language: Haskell2010
