--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: haskell
 ghc: 7.8
 script: 
   - cabal update && cabal install hspec
-  - runhaskell hs1_spec.hs -v
+  - runhaskell -v hs1_spec.hs
